@@ -21,6 +21,7 @@ Version 2.15.0
   on Python 3.10 and older (#2328).
 - Fix some places where a locale-dependent encoding could unintentionally
   be used instead of UTF-8 (#2326).
+- Fix Python traceback handling (#2226, #2329).
 
 Version 2.14.0
 --------------
